--- a/style.css
+++ b/style.css
@@ -233,6 +233,36 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-dark-grey,.w3-hover-border-dark-grey:hover,.w3-border-dark-gray,.w3-hover-border-dark-gray:hover{border-color:#616161!important}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
+ 
+ /* MODIFY FONT AWESOME ICONS */
+ 
+  /* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 50px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+} 
 
 /* IMAGE FLEX GALLERY */
 
@@ -275,4 +305,12 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   grid-template-columns: 40% 50%;
   grid-gap: 30px 10%;
   margin-bottom: 10%;
+}
+
+/* RESEARCH GRID */
+
+.flex-research {
+  display: flex;
+  max-width: 225px;
+  overflow-x: scroll;
 }
