--- a/style.css
+++ b/style.css
@@ -314,3 +314,34 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   max-width: 225px;
   overflow-x: scroll;
 }
+
+.flex-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+}
+
+.shorthand { 
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+
+.longhand { 
+  -webkit-flex-flow: wrap row;
+  flex-flow: wrap row;
+}
+
+li {
+   margin-right:auto;
+   margin-left:auto;  
+}
