--- a/style.css
+++ b/style.css
@@ -345,3 +345,13 @@ li {
    margin-right:auto;
    margin-left:auto;  
 }
+
+.img_wrap {
+  height: 100%;
+  text-align: center;
+}
+.img_wrap img {
+  width: auto;
+  height: auto;
+  max-height: 100%;
+}
